Images optimised and lazy loading added

--- a/src/company.pug
+++ b/src/company.pug
@@ -29,6 +29,6 @@ block main
                 | to provide the simplest engineering advise in order to deploy technology in South Africa.
         ul.company__images
             li
-                img(src="../assets/images/company/Fotolia_106239435_XS.jpg", alt="A building site with a variety of construction vehicles at work")
+                img(loading="lazy" src="../assets/images/company/Fotolia_106239435_XS.jpg?width=400", alt="A building site with a variety of construction vehicles at work")
             li
-                img.company__images-2(src="../assets/images/company/pexels-photo-24110-small.jpg", alt="Skyscraper buildings with a cloudy sky in the background")
+                img.company__images-2(loading="lazy" src="../assets/images/company/pexels-photo-24110-small.jpg?width=400", alt="Skyscraper buildings with a cloudy sky in the background")
