--- a/src/services.pug
+++ b/src/services.pug
@@ -13,7 +13,7 @@ block main
 
     section.page-width.services
         div
-            img.hidden.services__img(class="xl:block")(src="../assets/images/services/Services diagram redone-new.jpg", alt="Background image of Sileta's logo")
+            img.hidden.services__img(class="xl:block")(src="../assets/images/services/Services diagram redone-new.jpg?width=925", alt="Background image of multiple Sileta logos")
         div.services__container
             h3.mb-12.mt-12.underline.underline-offset-8.services__heading(class="md:text-left xl:no-underline xl:text-siletaXXL") Sileta Services
             ul.services__grid
@@ -58,4 +58,4 @@ block main
         div 
             h2 > Case Management
             p Sileta knows very well the challenge of juggling several commitments with limited resources. This is a challenge Sileta accepted very early and dedicated effort in mastering as a skill. We have distilled this skill into a Software System which reduces commitments into Cases.<br><br>This Case Management System (CMS) allows a Manager or Entrepreneur to delegate issues or cases online. The CMS allows for each case the definition of the following: Priority, Due Date, Responsible Person, and Classification of such case into several configurable categories such as Marketing, Operations, and Finance.<br><br>Moreover, the system allows for Clients to e-mail requests which the system handles through providing necessary feedback – while internally, management can then use the system to either delegate such a request to an internal or external resource.<br><br>As personnel continuously update their activities in resolving a case – appropriate information is automatically reflected on the Client side thereby reducing Client frustration by keeping him or her informed thereby streamlining Entrepreneurs’ limited resources.
-        img.mt-12(src="../assets/images/services/Fotolia_110420101_M.jpg", alt="Construction workers with hard hats on with a city skyline in the background")
+        img.mt-12(src="../assets/images/services/Fotolia_110420101_M.jpg?width=1100", alt="Construction workers with hard hats on with a city skyline in the background")
