--- a/src/index.pug
+++ b/src/index.pug
@@ -6,11 +6,11 @@ prepend head
 block main
     section
         div.hidden.fade.slides
-            img.object-cover.w-full.h-80(class="md:h-96 xl:h-128" src="../assets/images/slideshow/Fotolia_60168853_M.jpg", alt="")
+            img.object-cover.w-full.h-80(class="md:h-96 xl:h-128" src="../assets/images/slideshow/Fotolia_60168853_M.jpg", alt="Modern city skyline")
         div.hidden.fade.slides
-            img.object-cover.w-full.h-80(class="md:h-96 xl:h-128" src="../assets/images/slideshow/14369636.jpg", alt="")
+            img.object-cover.w-full.h-80(class="md:h-96 xl:h-128" src="../assets/images/slideshow/14369636.jpg", alt="Scaffolding of a large building at sunset")
         div.hidden.fade.slides
-            img.object-cover.w-full.h-80(class="md:h-96 xl:h-128" src="../assets/images/slideshow/pexels-photo-176342.jpg", alt="")
+            img.object-cover.w-full.h-80(class="md:h-96 xl:h-128" src="../assets/images/slideshow/pexels-photo-176342.jpg", alt="Workers at a building site at sunset")
     main.page-width.left-text
             ul.flex.flex-col.items-center.gap-4.mt-12.home(class="md:items-start")
                 li.home__heading
@@ -18,7 +18,7 @@ block main
                 li.home__paragraph
                     p Engineers make use of maths and science as tools to develop solutions to challenges facing human kind. They make sure developed solutions work. They make sure developed solutions are economical. Their goal is to bridge the world of complex and elaborate scientific discovery to the world of simple and practical application of technology to meet societal needs.
                 li.home__image
-                    img.mt-5.w-96(src="../assets/images/home/Fotolia_89442448_XS.jpg", alt="Worker wearing a construction hat and holding a clipboard")
+                    img.mt-5.w-96(src="../assets/images/home/Fotolia_89442448_XS.jpg?width=400", alt="Worker wearing a construction hat and holding a clipboard")
                 div.line-75(class="xl:w-full")
             ul.flex.flex-col.items-center.gap-4.home(class="md:items-start")
                 li.home__heading
@@ -26,7 +26,7 @@ block main
                 li.home__paragraph
                     p Engineers play a role of supporting Management to attain outcomes of a project. They consistently identify potential challenges that might stop successful project delivery and generate options and answers thereto. They communicate these challenges and solutions in simple terms to management such that associated costs are quantified together with the period necessary to meet project requirements.
                 li.home__image
-                    img.mt-5.w-96(src="../assets/images/home/Fotolia_112265141_XS.jpg", alt="Man drawing architect plans")
+                    img.mt-5.w-96(src="../assets/images/home/Fotolia_112265141_XS.jpg?width=400", alt="Man drawing architect plans")
                 div.line-75(class="xl:w-full")
             ul.flex.flex-col.items-center.gap-4.home(class="md:items-start")
                 li.home__heading
@@ -34,7 +34,7 @@ block main
                 li.home__paragraph
                     p About ten percent of project value is added by engineering. Without this contribution a project runs a risk of not meeting the project goals as desired or even having high ownership costs. At Sileta, we are open to an obligation-free discussion on how we can together approach your next project such that it succeeds.
                 li.home__image
-                    img.mt-5.w-96(src="../assets/images/home/Fotolia_57724804_S.jpg", alt="Man standing with arms folded wearing a blue overall and construction helmet")
+                    img.mt-5.w-96(src="../assets/images/home/Fotolia_57724804_S.jpg?width=400", alt="Man standing with arms folded wearing a blue overall and construction helmet")
                 div.line-75(class="xl:w-full")
             ul.flex.flex-col.items-center.gap-4.home(class="md:items-start")
                 li.home__heading
@@ -45,4 +45,4 @@ block main
                         li Project Specification which are normally supported by drawings and bills of quantities. Here the engineer tells how the project will be implemented how much such a project will need – much like a doctor’s prescription.
                         li Construction monitoring allows for the engineer to oversee the implementation of his solution. Here the quality of workmanship and implementation time is monitored to ensure the project falls within the available budget and time.
                 li.home__image
-                    img.mt-5.w-96(src="../assets/images/home/Fotolia_107164386_S.jpg", alt="Construction helmet resting on architect drawings")
+                    img.mt-5.w-96(src="../assets/images/home/Fotolia_107164386_S.jpg?width=400", alt="Construction helmet resting on architect drawings")
