feat: update contact details

--- a/src/contact.pug
+++ b/src/contact.pug
@@ -31,10 +31,10 @@ block main
                             button(onclick="showEmailContact()")
                                 h2(class="hover:text-siletaGreen").font-normal.text-blue-500.italic#showEmailContact Show Email
                         li
-                            a(href="tel: +27124358002")
-                                h2.font-normal +27 12 435 8002 (head office)
+                            a(href="tel: +27136631328")
+                                h2.font-normal +27 13 663 1328 (head office)
                         li
-                            h2.font-normal 254 Shelanti Avenue, Centurion, 0157, Pretoria
+                            h2.font-normal 12 Einstein Street, Highveld Technopark, Centurion, 0157, Pretoria
                         li
                             h2.font-normal PO Box 12291, Die Hoewes x2, 0163, Gauteng
                 img.w-72.mt-8.mx-auto(class="md:hidden xl:block xl:mt:0 xl:mx-0 xl:mr-8" src="../assets/images/icons/phone-green-large.svg", alt="Green phone icon")
