--- a/src/services.pug
+++ b/src/services.pug
@@ -13,7 +13,7 @@ block main
 
     section.page-width.services
         div
-            img.hidden.services__img(class="xl:block")(src="../assets/images/services/Services diagram redone-new.jpg?width=925", alt="Background image of multiple Sileta logos")
+            img.hidden.services__img(class="xl:block", src="../assets/images/services/Services diagram redone-new.jpg?width=925", alt="Background image of multiple Sileta logos")
         div.services__container
             h3.mb-12.mt-12.underline.underline-offset-8.services__heading(class="md:text-left xl:no-underline xl:text-siletaXXL") Sileta Services
             ul.services__grid
