--- a/src/layout/app.pug
+++ b/src/layout/app.pug
@@ -24,4 +24,4 @@ html(lang="en")
         block footer 
             include footer
             
-        script(src="index.js")
+        script(src="./index.js")
